--- a/web/index.html
+++ b/web/index.html
@@ -23,19 +23,19 @@
   <meta name="apple-mobile-web-app-title" content="safemove">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>safemove</title>
-  <link rel="manifest" href="manifest.json">
-</head>
-<body>
-  <!-- This script installs service_worker.js to provide PWA functionality to
-       application. For more information, see:
-       https://developers.google.com/web/fundamentals/primers/service-workers -->
-       <!-- The core Firebase JS SDK is always required and must be listed first -->
-  <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-app.js"></script>
+  <title>Safe Move</title>
+  <!-- Firebase Configuration-->
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
 
   <!-- TODO: Add SDKs for Firebase products that you want to use
       https://firebase.google.com/docs/web/setup#available-libraries -->
-  <script src="https://www.gstatic.com/firebasejs/8.7.1/firebase-analytics.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-analytics.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-storage.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-database.js"></script>
 
   <script>
     // Your web app's Firebase configuration
@@ -55,6 +55,14 @@
     firebase.analytics();
   </script>
 
+  
+  <link rel="manifest" href="manifest.json">
+  <!-- This script installs service_worker.js to provide PWA functionality to
+      application. For more information, see:
+      https://developers.google.com/web/fundamentals/primers/service-workers -->
+
+</head>
+<body>
   <script>
     var serviceWorkerVersion = null;
     var scriptLoaded = false;
